release 1.2 (03-2010)
- Fixed issue 466
  https://jersey.dev.java.net/issues/show_bug.cgi?id=466
  Avoid generation of empty params in WADL.
- Fixed issue 459
  https://jersey.dev.java.net/issues/show_bug.cgi?id=459
  A 307 (Temporary redirect) response for a resource which has a path
  ending in '/' has a correct full request URI, including query parameters (if present),
  for the Location header.
- Fixed issue 467
  https://jersey.dev.java.net/issues/show_bug.cgi?id=467
  @Inject can be utilized on provider-based classes.

release 1.1.5 (20-01-2010)
- Fixed issue 437
  https://jersey.dev.java.net/issues/show_bug.cgi?id=437
  Support the parsing of the Cache-Control header.
- Fixed issue 454
  https://jersey.dev.java.net/issues/show_bug.cgi?id=454
  Scanning of classes WEB-INF/classes in a war in ear now works for JBoss 5.x
  deployments.
- Fixed issue 456
  https://jersey.dev.java.net/issues/show_bug.cgi?id=456
  UriBuilder can be built from URIs whose authority component is a
  registry based naming authority.
- When tracing is enabled exceptions that are mapped to responses will be
  logged.
- Added formatted support when JSON with natural notation is used
- Fixed issue 362
  https://jersey.dev.java.net/issues/show_bug.cgi?id=362
  Deprecated HttpHelper.getAcceptLangauge and added new method
  HttpHelper.getAcceptLanguage.
- Fixed issue 448
  https://jersey.dev.java.net/issues/show_bug.cgi?id=448
  Ensure that spring 2.5.x dependency version does not depend on Spring 3.0.
- Fixed issue 450
  https://jersey.dev.java.net/issues/show_bug.cgi?id=450
  Equals method of AsyncWebResource was incorrect.
- Fixed issue 202
  https://jersey.dev.java.net/issues/show_bug.cgi?id=202
  Support the quality source parameter, "qs", on media types declared with
  @Produces or @ImplicitProduces.
  The media type, M say, with the highest quality source parameter for a request
  will be selected as the most acceptable media type if X is an acceptable
  media type.